manifests/foundation.yaml
# Generated from vcloud-ssot.yaml by tools/render_ssot.py.
apiVersion: v1
kind: Namespace
metadata:
  name: platform-services
  labels:
    vcloud.io/managed: 'true'
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.30
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.30
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.30
  annotations:
    vcloud.io/cluster: vCloud-prod-01
    vcloud.io/base-domain: vcloud.example.com
    vcloud.io/gitops-repository: amazen33/vCloud
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: platform-services
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress: []
  egress: []
---
apiVersion: v1
kind: Namespace
metadata:
  name: workload-apps
  labels:
    vcloud.io/managed: 'true'
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.30
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.30
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.30
  annotations:
    vcloud.io/cluster: vCloud-prod-01
    vcloud.io/base-domain: vcloud.example.com
    vcloud.io/gitops-repository: amazen33/vCloud
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: workload-apps
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress: []
  egress: []
---
apiVersion: v1
kind: Namespace
metadata:
  name: hpc-compute
  labels:
    vcloud.io/managed: 'true'
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.30
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.30
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.30
  annotations:
    vcloud.io/cluster: vCloud-prod-01
    vcloud.io/base-domain: vcloud.example.com
    vcloud.io/gitops-repository: amazen33/vCloud
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: hpc-compute
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress: []
  egress: []
